fixed flex wrap issue

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 .container {
   display: flex;
-  flex-wrap: flex;
+  flex-wrap: wrap;
 }
 
 .item {
